--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
     </head>
     <body>
-        <script type='text/javascript' src='snack3/script.js'></script>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div id="red"></div>
+                </div>
+                <div class="col-6">
+                    <div id="green"></div>
+                </div>
+            </div>
+        </div>
+        <script type='text/javascript' src='snack8/script.js'></script>
     </body>
 </html>
