--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Js1</title>
+        <title>Snacks</title>
+        <link rel="stylesheet" href="snack7/style.css">
 
         <!-- bootstrap 5.2 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -21,6 +22,11 @@
                 </div>
             </div>
         </div>
+        <div class="button">
+            <a class="btn border-dark" href="#">
+                Play
+            </a>
+        </div> 
         <script type='text/javascript' src='snack8/script.js'></script>
     </body>
 </html>
